fixed filename overflow

--- a/themes/carbone/style.less
+++ b/themes/carbone/style.less
@@ -2324,6 +2324,10 @@ select > optgroup {
 }
 /* FIN DROPDOWN */
 
+tr.torrent_filename_row {
+  overflow-wrap: anywhere;
+}
+
 /*DETAILS TORRENTS, MASQUAGE HOVER TORRENT VALIDE*/
 .torrent_table tr.torrent_row:hover img {
   border: none!important;
